@@ -36,11 +36,6 @@ namespace GtkSharp.Generation {
 			this.impl_ns = impl_ns;
 		}
 
-		private bool UsesHandle (IGeneratable igen) 
-		{
-			return igen is ManualGen || igen is ObjectGen || igen is InterfaceGen || igen is OpaqueGen;
-		}
-
 		public override string ToString ()
 		{
 			if (parameters.Count == 0)
