@@ -1,5 +1,9 @@
 2005-04-20  Mike Kestner  <mkestner@novell.com>
 
+	* generator/*.cs : cleanup the unused private member warnings.
+
+2005-04-20  Mike Kestner  <mkestner@novell.com>
+
 	* parser/gapi-parser.cs : add a directory element with child exclude
 	elements to simplify source version updating. 
 	* sources/gtk-sharp-sources.xml : switch to directory elements.
